<resources>
    <string name="app_name">1号云仓</string>
    <string name="title_firstpage">首页</string>
    <string name="title_love_food">爱美食</string>
    <string name="title_web_store">积分商城</string>
    <string name="title_sugguestion_complaint">投诉建议</string>
    <string name="title_item_iexchg">商品兑换</string>
    <string name="title_message_center">消息中心</string>
    <string name="label_toast_not_enough_ac">您的积分不足以兑换，继续努力哦...</string>
    <string name="label_web_store_exchg">兑换</string>
    <string name="label_web_store_exchg_finish">已兑完</string>
    <string name="label_my_ac">我的积分:</string>
    <string name="label_view_ac_rule">查看积分规则</string>
    <string name="title_my">我的</string>
    <string name="action_settings">账户设置</string>
    <string name="label_user_tags">我的健康标签</string>
    <string name="label_aboutus">关于我们</string>
    <string name="label_title_shop_detail">店铺详情</string>
    <string name="label_register_mobile">注册手机 :</string>
    <string name="label_input_mobile">输入你的手机号</string>
    <string name="label_bind_mobile">绑定手机</string>
    <string name="label_bind_mobile_already">已绑定手机</string>
    <string name="label_clear_cache">清理图片缓存</string>
    <string name="label_input_verification">输入短信验证码</string>
    <string name="label_login_fetch_verification">获取验证码</string>
    <string name="label_login_fetch_verification_failed">获取验证码失败</string>
    <string name="label_company_beian">© 2014 一号云仓 版权所有 沪ICP备 14022318号</string>
    <string name="label_input_mobile_tips">请输入正确的手机号</string>
    <string name="label_login_register">登录/注册</string>
    <string name="label_login_jumpover">先逛逛</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_hello">1号云仓</string>
    <string name="label_product_detail">产品详情</string>
    <string name="label_message_detail">消息详情</string>
    <string name="title_product_detail">商品简介</string>
    <string name="title_shopping_cart">购物车</string>
    <string name="title_myfavorite">我的收藏</string>
    <string name="title_confirm_order">确认订单</string>
    <string name="title_order_detail">订单详情</string>
    <string name="title_my_orders">我的订单</string>
    <string name="title_confirm_info">确认信息</string>
    <string name="title_experience_comment">评价</string>
    <string name="title_label_sugguestion">建议</string>
    <string name="label_hint_must_fillin">必填</string>
    <string name="title_health_vegetable">健康菜谱</string>
    <string name="title_select_city">选择城市</string>
    <string name="label_toast_select_city">请先选择城市</string>
    <string name="title_select_shequ">选择小区</string>
    <string name="title_join_us">加盟云仓</string>
    <string name="title_appeal_call">投诉电话</string>
    <string name="label_category_fruit">水果类</string>
    <string name="label_category_vegetable">蔬菜类</string>
    <string name="label_category_meat">肉禽类</string>
    <string name="label_category_seafood">水产品</string>
    <string name="label_category_cooked">休闲类</string>
    <string name="label_category_oil">粮油类</string>
    <string name="label_rmb">￥</string>
    <string name="searchpoint_hint">输入小区名或拼音首字母</string>
    <string name="pager_product_info">商品信息</string>
    <string name="pager_product_comment">评价</string>
    <string name="title_cookbook_groupon">今日特惠</string>
    <string name="title_upload_works">上传作品</string>
    <string name="btn_goback_home">返回首页</string>
    <string name="btn_view_my_orders">查看订单状态</string>
    <string name="btn_goback">返回</string>
    <string name="btn_select_all">全选</string>
    <string name="btn_submit">提交</string>
    <string name="btn_goback_shoppingcart">返回购物车</string>
    <string name="btn_submit_order">提交订单</string>
    <string name="btn_receive_order">确认订单</string>
    <string name="btn_unselect_all">取消全选</string>
    <string name="btn_delete">删除</string>
    <string name="btn_clear">清空</string>
    <string name="btn_OK">确 认</string>
    <string name="btn_cancel">取 消</string>
    <string name="btn_select_point">搜索小区</string>
    <string name="btn_goto_pay">购买</string>
    <string name="btn_comment">评价</string>
    <string name="btn_edit">编辑</string>
    <string name="btn_save">保存</string>
    <string name="label_delivery_address">收货地址</string>
    <string name="label_delivery_address_in_detail">详细地址</string>
    <string name="label_delivery_contact">联系人</string>
    <string name="label_delivery_mobile">手机</string>
    <string name="label_delivery_time">配送时间</string>
    <string name="label_delivery_notes">留言...</string>
    <string name="label_delivery_items">商品清单</string>
    <string name="label_order_price_list">价格清单</string>
    <string name="label_delivery_pay">付款方式</string>
    <string name="label_delivery_notice">注意事项</string>
    <string name="label_cash_on_delivery">货到付款</string>
    <string name="label_phone_contact">联系人</string>
    <string name="label_product_price">价格 :</string>
    <string name="label_product_dianquan">点券 :</string>
    <string name="label_product_sales">销量 :</string>
    <string name="label_product_brand">品牌 :</string>
    <string name="label_product_from">产地 :</string>
    <string name="label_product_tags">标签 :</string>
    <string name="label_product_promotion">促销 :</string>
    <string name="label_product_quantity">数量: </string>
    <string name="label_product_description">描述</string>
    <string name="label_product_cook">菜谱</string>
    <string name="label_category">分类</string>
    <string name="label_sort">排序</string>
    <string name="label_listview">列表视图</string>
    <string name="label_shoppingcart">购物车</string>
    <string name="label_orders_ongoing">待处理订单</string>
    <string name="label_orders_finished">已完成订单</string>
    <string name="label_mypoint">我的社区</string>
    <string name="label_myacc">我的账户</string>
    <string name="user_edit">修改资料</string>
    <string name="user_edit_passwd">修改密码</string>
    <string name="user_logout">退出</string>
    <string name="label_passwd">密码 :</string>
    <string name="label_newpasswd">新密码 :</string>
    <string name="label_contact">联系人 :</string>
    <string name="label_mobile">手机 :</string>
    <string name="label_user_nickname">昵称</string>
    <string name="label_user_email">邮箱</string>
    <string name="label_user_addr">地址</string>
    <string name="label_name">姓名</string>
    <string name="label_regist_mail">邮箱 :</string>
    <string name="label_register_mail">注册邮箱 :</string>
    <string name="label_login">登录</string>
    <string name="label_login_success">登录成功</string>
    <string name="label_new_password_howto">提示：填写您的注册信息及新密码，6小时内登录邮件确认后，新密码生效。如有问题，请联系客服。</string>
    <string name="label_user_passwd_incorrect">用户名或密码错误，请重新输入</string>
    <string name="label_order_shequ_empty">您还没有选择所在小区>>选择小区</string>
    <string name="label_toast_fillin_all">请填写完整</string>
    <string name="label_order_price_limit">订单不能小于10元</string>
    <string name="label_toast_invalid_address">请正确填写地址</string>
    <string name="label_toast_fillin_correct">请正确填写</string>
    <string name="label_toast_invalid_mobile">请正确填写手机号</string>
    <string name="label_toast_invalid_idcard">身份证填写不正确</string>
    <string name="label_toast_order_failed">提交订单出错，请确认后重新提交</string>
    <string name="label_toast_api_error">网络异常：接口错误</string>
    <string name="label_register_failed">注册提交失败</string>
    <string name="label_chg_pwd_failed">出错，您填的手机号与邮箱不正确</string>
    <string name="label_toast_confirm_user_agreement">请确认用户协议</string>
    <string name="label_toast_duplicate_submit">重复提交</string>
    <string name="label_toast_success_submit">提交成功</string>
    <string name="label_toast_success_submit_check_email">提交成功，请登录邮件确认</string>
    <string name="label_toast_failed_submit">提交失败</string>
    <string name="label_user_name">昵称 :</string>
    <string name="label_user_level">等级 :</string>
    <string name="label_acculative_score">积分 :</string>
    <string name="label_rem_pwd">记住密码</string>
    <string name="label_auto_login">自动登录</string>
    <string name="label_register">注册</string>
    <string name="label_change_password">修改密码</string>
    <string name="label_forget_password">忘记密码？</string>
    <string name="label_edit">编 辑</string>
    <string name="label_shop_announce">公告 :</string>
    <string name="mail_hint">184922582@qq.com</string>
    <string name="mail_findback_password_hint">用于找回密码</string>
    <string name="userpwd_hint">不少于6位</string>
    <string name="agreement_show">同意1号云仓服务协议</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    <string name="comment_all_expierence_text">全部</string>
    <string name="comment_good_expierence_text">好评</string>
    <string name="comment_middle_expierence_text">中评</string>
    <string name="comment_bad_expierence_text">差评</string>
    <string name="label_comment_rating">评分 :</string>
    <string name="btn_add_to_cart">加入购物车</string>
    <string name="btn_direct_order">立即下单</string>
    <string name="btn_snapped_up">立即抢购</string>
    <string name="label_comment_all">评价全部</string>
    <string name="label_comment_tips_for_items">选择商品进行评价</string>
    <string name="label_comment_star_1">不满意</string>
    <string name="label_comment_star_2">一般</string>
    <string name="label_comment_star_3">还可以</string>
    <string name="label_comment_star_4">满意</string>
    <string name="label_comment_star_5">非常满意</string>
    <string name="label_degree_of_satisfication">满意度:</string>
    <string name="label_season_vegetable">时令菜</string>
    <string name="label_select_items">请先选择商品</string>
    <string name="label_select_pic">选择图片</string>
    <string name="label_choose_avatar">选择头像</string>
    <string name="label_tips">提示</string>
    <string name="label_tip_cache">确认清除图片缓存？保留图片缓存可以让您访问更快!</string>
    <string name="label_tip_confirm_to_call_shop_keeper">确认电话联系商家？</string>
    <string name="label_tip_confirm_to_exit">确认退出1号云仓？</string>
    <string name="label_tip_confirm_to_cancel_order">确认取消订单？</string>
    <string name="label_tip_confirm_to_submit_order">确认提交订单？</string>
    <string name="label_tip_confirm_to_addto_shoppingcart">确认将此订单中的商品加入购物车？</string>
    <string name="label_tip_cache_cleared">图片缓存已清除 :)</string>
    <string name="label_add_acculative_score">感谢您的评价，获得{n}积分</string>
    <string name="label_confirm_to_remove_items">确认移除选中的商品吗？</string>
    <string name="label_storage_not_found">未找到存储卡，无法存储照片！</string>
    <string name="label_not_login">您还未登录哦</string>
    <string name="select_option_default">默认</string>
    <string name="label_status_to_confirm">待确认</string>
    <string name="label_status_processing">正在处理</string>
    <string name="label_status_delivering">正在派送</string>
    <string name="label_status_cancel">订单取消</string>
    <string name="label_status_cancel_seller">商家取消</string>
    <string name="label_status_succeed">订单成功</string>
    <string name="label_status_comment">已评价</string>
    <string name="label_btn_cancel_order">取消订单</string>
    <string name="info_already_in_cart">已在购物车</string>
    <string name="info_already_sellout">已售完</string>
    <string name="info_addtocart_success">添加购物车成功</string>
    <string name="info_order_split">您的订单来自不同的配送中心，提交后自动按拆分成{n}个订单，分别计算运费。</string>
    <string name="label_shipping_notice">1. 有机类商品当天17点前下单，第二天配送；17点之后下单，隔天配送；有机类商品和非有机类商品分开配送；\n2. 所有商品请至少提前2-3个小时预订，这样高峰时我们可以准时送到，欢迎提前一天下单；\n3. 订单满30元免费送，不满30元加收3元派送费，以实际情况为准；\n4. 送货上门时请当面验收，满意付款，订单结束后评价攒积分；\n5. 退换货：若收货后觉得质量不好、不好吃、不新鲜，可联系商家说明原因，申请退换货；\n6. 如联系方式填写错误，将无法配送。</string>
    <string name="label_order_total_price">合计:</string>
    <string name="label_order_delivery_fee">运费:</string>
    <string name="label_about_yhyc">关于我们</string>
    <string name="label_service_protocol">服务协议</string>
    <string name="label_service_after_sales">售后服务</string>
    <string name="label_service_proposals">投诉建议</string>
    <string name="label_app_ver">版本</string>
</resources>